datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  password  String
  firstname String?
  lastname  String?
  posts     Post[]
  articles  Article[]
  issues    Issue[]
  role      Role
}

model Post {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean
  title     String
  content   String?
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  String?
}

model Article {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean  @default(false)
  archived  Boolean  @default(false)
  title     String?
  content   String?
  reading_time  Int?

  //Foreign Key
  issue     Issue?    @relation(fields: [issueId], references: [id])
  issueId  String?
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  String?
  
}

model Issue {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean  @default(false)
  archived  Boolean  @default(false)
  articles  Article[]

  //Foreign Key
  author    User?    @relation(fields: [authorId], references: [id])
  authorId  String?
  
}

enum Role {
  ADMIN
  USER
}
