//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  articles Article [not null]
  issues Issue [not null]
  role Role [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Article {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null, default: false]
  archived Boolean [not null, default: false]
  title String
  content String
  reading_time Int
  issue Issue
  issueId String
  author User
  authorId String
}

Table Issue {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null, default: false]
  archived Boolean [not null, default: false]
  articles Article [not null]
  author User
  authorId String
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Article.issueId > Issue.id

Ref: Article.authorId > User.id

Ref: Issue.authorId > User.id